<resources>
    <string name="app_name">Agri Botz</string>
    <string name="Landing_Page_Title">Smart Agri Automation System with AI Power</string>
    <string name="Landing_Page_Subtitle">Empowering farmers with precision and autonomy for higher yields and future-ready farming</string>
    <string name="Existing_User">Existing User</string>
    <string name="Enroll_Now">Enroll Now</string>
    <string name="Enroll_Text">Please contact our representative at sales@agribotz.com to establish a new account for you</string>
    <string name="Forgot_Password_Text">Please contact our representative at cs@agribotz.com to reset you account</string>
    <string name="Enroll_Title">Enrollment</string>
    <string name="Forgot_Password_Title">Forgot Password</string>
    <string name="Login_Title">Login</string>
    <string name="Login_subTitle">Please enter your mobile number and password to login</string>
    <string name="Error_Transaction_Failed">Transaction failed, please try again</string>
    <string name="Error_Mobile_Format">Invalid mobile number format</string>
    <string name="Error_Internet_Connection">Internet connection error</string>
    <string name="Error_Something_Wrong">Something went wrong</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Next">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="Required_Field">Required Field</string>
    <string name="Water_Valves">Water Valves</string>
    <string name="Water_Valve2_Status">Water Valve 2 Status</string>
    <string name="Sensors">Sensors</string>
    <string name="Settings">Settings</string>
    <string name="Valve_Open">Open</string>
    <string name="Valve_Closed">Closed</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Not_Set">Not set</string>
    <string name="Add_Site">Add new site</string>
    <string name="Delete_Site">Delete site</string>
    <string name="Enter_Site_Name">Enter site name</string>
    <string name="Enter_Gadget_Name">Enter gadget name</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirmation">Are you sure you want to continue?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Rename_Site">Rename Site</string>
    <string name="Rename_Gadget">Rename Gadget</string>
    <string name="Rename">Rename</string>
    <string name="Enter_New_Site_Name">Enter new site name</string>
    <string name="Created_Since">Created since %1$s</string>
    <string name="Online_Since">Online since %1$s</string>
    <string name="Offline_Since">Offline since %1$s</string>
    <string name="Activated_Since">Activated since %1$s</string>
    <string name="Deactivated_Since">Deactivated since %1$s</string>
    <string name="Terminated_Since">Terminated since %1$s</string>
    <string name="Opened_Since">Water valve opened since %1$s</string>
    <string name="Closed_Since">Water valve closed since %1$s</string>
    <string name="Manual_Since">Manual irrigation adjusted since %1$s</string>
    <string name="Automatic_Since">Automatic irrigation adjusted since %1$s</string>
    <string name="Updated_Since">Updated since %1$s</string>
    <string name="Gadgets_Count">Gadgets: %1$d</string>
    <string name="My_Sites">My Sites</string>
    <string name="Site_Gadgets">Site Gadgets</string>
    <string name="Gadget_Details">Gadget Details</string>
    <string name="GPS">GPS Location</string>
    <string name="Satellite_View">Satellite View</string>
    <string name="Map_View">Map View</string>
    <string name="Set_Gadget_Location">Set Gadget Location</string>
    <string name="Selected_Location">Selected Location</string>
    <string name="Move_Map">Move the map to choose the location</string>
    <string name="Save_Or_Select_Another">Save this location or select another</string>
    <string name="Location_Permission_Required">Location permission is required to use your current location</string>
    <string name="Use_Current_Location">Use my current location</string>
    <string name="Location_Not_Available">Your location is not available</string>
    <string name="Set_Location">Set Location</string>
    <string name="Location_Updated">Location updated successfully</string>
    <string name="Google_Maps">Open in Google maps</string>
    <string name="Gadget_Location">Gadget Location</string>
    <string name="Created">Creation</string>
    <string name="Terminated">Terminated</string>
    <string name="Active">Active</string>
    <string name="Inactive">Inactive</string>
    <string name="Online">Online</string>
    <string name="Offline">Offline</string>
    <string name="no_sites_message">You don’t have any sites yet.\nTap + to add one.</string>
    <string name="no_gadgets_message">You don’t have any gadgets yet.\nContact our representative to add gadgets.</string>
    <string name="Ok">OK</string>
    <string name="Gadget_Manager">Gadget Manager</string>
    <string name="Water_Valve_Status">Water Valve Status</string>
    <string name="Manual_Irrigation">Manual Control</string>
    <string name="Water_Valve_Scheduler1">First Schedule</string>
    <string name="Water_Valve_Scheduler2">Second Schedule</string>
    <string name="Water_Valve_Scheduler3">Third Schedule</string>
    <string name="Water_Valve_Scheduler4">Fourth Schedule</string>
    <string name="Water_Valve_Scheduler5">Fifth Schedule</string>
    <string name="Starting_On">Starting on</string>
    <string name="Duration">Duration</string>
    <string name="Repeat_Every">Repeat every</string>
    <string name="Saturday_Short">S</string>
    <string name="Sunday_Short">S</string>
    <string name="Monday_Short">M</string>
    <string name="Tuesday_Short">T</string>
    <string name="Wednesday_Short">W</string>
    <string name="Thursday_Short">T</string>
    <string name="Friday_Short">F</string>
    <string name="End_Recurrence">End recurrence</string>
    <string name="Repeat_Every_Hour_Value">Hour</string>
    <string name="Repeat_Every_Day_Value">Day</string>
    <string name="Repeat_Every_Week_Value">Week on</string>
    <string name="Repeat_Every_Month_Value">%1$s of the month</string>
    <string name="Repeat_Every_Year_Value">%1$s of %2$s</string>
    <string name="Edit_Settings">Edit Settings</string>
    <string name="Delete_Settings">Delete Settings</string>
    <string name="Deep_Sleep">Deep Sleep Mode</string>
    <string name="Refresh_Rate">Wake ups Rate</string>
    <string name="GMT_Zone">GMT Zone</string>
    <string name="Restart">Restart</string>
    <string name="no_label">No Label</string>
    <string name="Duration_Hours_Minutes_Value">%1$d h %2$d m</string>
    <string name="Duration_Hours_Value">%1$d h</string>
    <string name="Duration_Minutes_Seconds_Value">%1$d m %2$d s</string>
    <string name="Duration_Minutes_Value">%1$d m</string>
    <string name="Duration_Seconds_Value">%1$d s</string>
    <string name="Schedule_Date_At_Time">%1$s at %2$s</string>
    <string name="Refresh_Rate_Value">Each %1$.1f hours</string>
    <string name="Hours">Hours</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>
    <string name="Hour">Hour</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Never_Ends">Never</string>
    <string name="Ends_On">Ends on</string>
    <string name="Personal_Profile">Personal Profile</string>
    <string name="Logout">Logout</string>
    <string name="Welcome_User">Welcome, %1$s!</string>
    <string-array name="schedule_repeat_modes">
        <item>@string/Repeat_Mode_None</item>
        <item>@string/Repeat_Mode_Hour</item>
        <item>@string/Repeat_Mode_Day</item>
        <item>@string/Repeat_Mode_Week</item>
        <item>@string/Repeat_Mode_Month</item>
        <item>@string/Repeat_Mode_Year</item>
    </string-array>
    <string name="Repeat_Mode_None">Does not repeat</string>
    <string name="Repeat_Mode_Hour">Hour</string>
    <string name="Repeat_Mode_Day">Day</string>
    <string name="Repeat_Mode_Week">Week</string>
    <string name="Repeat_Mode_Month">Month</string>
    <string name="Repeat_Mode_Year">Year</string>
    <string-array name="months_list">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="month_day_ordinals">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>
</resources>